# simple_shell

./: CMakeLists.txt  Doxyfile  shell.c
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  doxygen.yml
include/simple_shell/: RPN.h  rec_desc.h
src/: RPN.c  errors.c  funcs.c  rec_desc.c  stack.c
src/RPN/: CMakeLists.txt  RPN.c
src/errors/: CMakeLists.txt  errors.c  errors.h
src/funcs/: CMakeLists.txt  arithm_func.c  arithm_func.h  funcs.c  funcs.h
src/rec_desc/: CMakeLists.txt  rec_desc.c  rec_desc.h
src/stack/: CMakeLists.txt  stack.c  stack.h
